# hyprwhspr

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/hyprland/: hyprchrp-tray.sh
config/systemd/: hyprchrp.service
config/waybar/: hyprchrp-module.jsonc  hyprchrp-style.css
docs/plans/factory/: 2025-11-15-parakeet-v3-onnx-asr-documentation-updates.md  2025-11-15-rename-project-from-hyprwhspr-to-hyprchrp.md
lib/: main.py
lib/src/: __init__.py  audio_capture.py  audio_manager.py  audio_utils.py  config_manager.py  global_shortcuts.py  logger.py  parakeet_manager.py  stt_backend_factory.py  text_injector.py  whisper_manager.py
scripts/: fix-uinput-permissions.sh  install-omarchy.sh  install-services.sh  sync-production.sh  test-parakeet.py  test-services.sh  uninstall-hyprchrp.sh
