[project]
name = "hyprchrp"
version = "1.0.0"
description = "hyprchrp: Hyprland speech-to-text with Parakeet v3 + Whisper backends"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "huggingface_hub>=0.24",
    "sounddevice>=0.4.6",
    "numpy>=1.21.0",
    "scipy>=1.10.0",
    "evdev>=1.6.0",
    "pyperclip>=1.8.2",
    "pywhispercpp==1.3.3",
    "requests>=2.25.0",
    "psutil>=5.8.0",
    "rich>=13.0.0",
    "onnxruntime>=1.15.0",
    "onnx-asr>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["lib"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.13"
namespace_packages = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "pyperclip",
    "sounddevice",
    "pywhispercpp",
    "pywhispercpp.*",
    "onnx_asr",
    "evdev",
]
ignore_missing_imports = true
